--- a/package.json
+++ b/package.json
@@ -3,43 +3,47 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
+    "node": ">=14",
     "npm": ">=6"
   },
   "dependencies": {
-    "@craco/craco": "6.1.1",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.6.2",
-    "chalk": "4.1.0",
-    "date-fns": "2.23.0",
-    "history": "5.0.1",
-    "jest-styled-components": "7.0.5",
-    "js-cookie": "3.0.0",
-    "msw": "0.34.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "4.2.0",
+    "@craco/craco": "7.1.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "chalk": "4.1.2",
+    "date-fns": "2.30.0",
+    "history": "5.3.0",
+    "jest-styled-components": "7.1.1",
+    "js-cookie": "3.0.5",
+    "msw": "1.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
     "react-loader-spinner": "4.0.0",
-    "react-player": "2.9.0",
-    "react-router-dom": "5.2.0",
+    "react-player": "2.14.1",
+    "react-router-dom": "5.3.4",
     "react-slick": "0.30.3",
-    "react-toastify": "8.2.0",
+    "react-speech-kit": "3.0.1",
+    "react-toastify": "9.1.3",
     "reactjs-popup": "2.0.5",
     "slick-carousel": "1.8.1",
-    "styled-components": "5.3.0",
-    "surge": "0.23.0"
+    "styled-components": "6.1.8",
+    "surge": "0.23.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.13.2",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
+    "@babel/eslint-parser": "7.28.4",
+    "@babel/preset-react": "7.27.1",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-styled-components": "2.1.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "husky": "8.0.3",
+    "lint-staged": "15.2.7",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "prettier": "3.3.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "craco start",
