--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.28.4",
     "@babel/preset-react": "7.27.1",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "2.1.1",
     "eslint-config-airbnb": "19.0.4",
@@ -71,6 +73,10 @@
     "collectCoverageFrom": [
       "src/**/*.js"
     ]
+  },
+  "resolutions": {
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "browserslist": {
     "development": [
