--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
   },
   "resolutions": {
     "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv-keywords": "3.5.2",
+    "ajv-formats": "1.6.1"
   },
   "browserslist": {
     "development": [
